Use api-extractor
Co-authored-by: えび (ebi_chan) <spinylobster@outlook.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
         "strict": true,
         "outDir": "build/",
         "target": "esNext",
-        "sourceMap": true
+        "sourceMap": true,
+        "allowSyntheticDefaultImports": true,
+        "declaration": true
     }
 }
