--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
     "name": "lifegame-typescript",
     "version": "1.0.0",
     "description": "",
-    "main": "src/index.js",
+    "main": "build/index.js",
+    "types": "build/typings.d.ts",
     "scripts": {
+        "build": "tsc && api-extractor run --local",
         "test": "mocha --require espower-typescript/guess test/**/*.ts",
         "test-w": "mocha --watch-extensions ts -w --require espower-typescript/guess test/**/*.ts"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@microsoft/api-extractor": "^7.7.0",
         "@types/mocha": "^5.2.7",
         "@types/node": "^12.12.9",
         "espower-typescript": "^9.0.2",
